# ae-co-system

./: .gitignore  AEGNT27_SOCIAL_AUTOMATION.md  AEGNTIC_AEGNT_INSPIRED_STRATEGY.md  AEGNTIC_BRAND_COLORS.txt  AEGNTIC_BRAND_VOICE_GUIDE (copy).txt  AEGNTIC_ECOSYSTEM_COMPLETE_MINDMAP.md  AEGNTIC_PITCH_DECK.md  AEGNTIC_PITCH_DECK_STRUCTURE.md  AEGNTIC_WEBSITE_IMPLEMENTATION (copy).txt  AEGNTIC_WEBSITE_PAGES.md  AEGNTIC_WEBSITE_REDESIGN_AEGNT.md  AEGNTIC_WEBSITE_SPECS.md  CHROME_STORE_SUBMISSION_PACKAGE.md  CLAUDE.md  DIGITAL_ECOSYSTEM_IMPLEMENTATION.md  DIGITAL_PRESENCE_ECOSYSTEM.md  ECOSYSTEM_ULTRAPLAN.md  FaiL-Resurect  README.md  REPOSITORY_STRUCTURE_PLAN.md  SECURITY.md  SOCIAL_MEDIA_ANALYTICS_DASHBOARD.md  complete_domain_automation.py  direct_porkbun_dns.py  domain_verification_guide.md  email send from.txt  expanded_gmail_config.json  fix_security_vulnerabilities.sh  gmail_automation_config.json  gmail_automation_progress.json  gmail_automation_script.py  gmail_browser_automation.py  gmail_existing_session.py  gmail_final_automation.py  gmail_sendas_automation.py  gmail_setup_checklist.txt  gmail_setup_guide.py  gmail_simple_automation.py  mailinglist-research.md  manual_dns_commands.md  (+7 more)
4site/services/ai-analysis-pipeline/: Cargo.toml  README.md
4site/services/video-slideshow-generator/: pyproject.toml
CLAEM/claem-mcp-server/: README.md  pyproject.toml
CLAEM/claem-mcp-server/tests/: test_claem_validation.py
DAILYDOCO/: .env.example  .eslintrc.json  .gitignore  .mcp.json  .mcp.json.backup.scattered.20250605_024038  100B_INFRASTRUCTURE_REPORT.md  AEGNT-27_COMPLETION_SUMMARY.md  AEGNT27_TRANSFORMATION_SUMMARY.md  AEGNTIC_BRAND_COLORS.md  AEGNTIC_DESIGN_SYSTEM.md  AEGNTIC_IMPLEMENTATION_GUIDE.md  CHANGELOG.md  CHANNEL_ASSETS_DESIGN.md  CHROME_STORE_SUBMISSION_PACKAGE.md  CLAUDE.md  CONTENT_PIPELINE_STRATEGY.md  CRITICAL-PATH-IMPLEMENTATION.md  Cargo.toml  DEPLOYMENT_STATUS.md  DIGITAL_PRESENCE_STRATEGY.md  DOCKER_DEPLOYMENT_GUIDE.md  ELITE_WEBSITE_TRANSFORMATION_PLAN.md  FILE_CONSOLIDATION_PLAN.md  FLYWHEEL_INTEGRATION_README.md  IMPLEMENTATION_ROADMAP.md  INSTALL.md  MCP-SERVER-STATE.md  META_DEMO_SCRIPT.md  PRODUCTION_DEPLOYMENT_BREAKDOWN.md  README.md  REVENUE_MODEL_IMPLEMENTATION_COMPLETE.md  TASKS.md  ULTRATHINK_BUILD_REPORT.md  ULTRATHINK_EXPONENTIAL_GROWTH_STRATEGY.md  ULTRATHINK_OBSTACLES_AND_SOLUTIONS.md  VIDEO_GENERATION_SUCCESS.md  WEEK1-TECHNICAL-CHECKLIST.md  YOUTUBE_CHANNEL_STRATEGY.md  YOUTUBE_IMPLEMENTATION_GUIDE.md  ZERO_COST_SETUP.md  (+58 more)
DAILYDOCO/.claude/: settings.json
DAILYDOCO/.claude/commands/: exe-parallel.md  journal-entry.md  performance-analysis.md  prime.md  privacy-validation.md  restart-claude.sh  restart.md
DAILYDOCO/.claude/context/: mcp-config-backup.json  restart-marker.txt  restoration-prompt.md  session-state.json
DAILYDOCO/.deployment/: README.md
DAILYDOCO/.deployment/docs/: SPRINT-7-COMPLETION-SUMMARY.md  youtube-channel-setup.md
DAILYDOCO/.deployment/scripts/: deploy-aegntic-website.sh  licensing-validation-system.rs  publish-mcp-server.sh  social-media-automation-setup.js
DAILYDOCO/.github/workflows/: ci.yml
DAILYDOCO/.nx/cache/: nx_files.nxt
DAILYDOCO/R&D/: CLAUDE.md  README.md  TRANSCENDENT_AI_PLATFORM_ARCHITECTURE.md  voice-personality-intelligence-research.md
DAILYDOCO/R&D/.claude/: settings.json
DAILYDOCO/R&D/aegntix-ui/: .gitignore  AEGNTIX_EXECUTION_PLAN.md  AegntiX MVP - Quick Start Guide.md  AegntiX MVP Setup Script.sh  Building a Revolutionary AI Orchestration Platform - Unifying Aegnt UI, Knowledge Graphs, and Multi-Model Deployment.md  IMPLEMENTATION_STATUS.md  PHASE2_COMPLETION_REPORT.md  README.md  (+5 more)
DAILYDOCO/aegnt-27-standalone/: README.md
DAILYDOCO/aegntic-concepts/: README.md  aegntic-preloader.html  package.json
DAILYDOCO/aegntix-ui/: AEGNTIX_ULTIMATE_ARCHITECTURE.md  AegntiX_Strategic_Timeline_Analysis.md  CLAUDE.md  EXECUTION COMMANDS & IMMEDIATE START.md  IMPLEMENTATION_EXECUTION_PLAN.md  REALITY_DISTORTION_FIELD_STRATEGY.md  STRATEGIC_CHESS_ANALYSIS.md  aegntix-mvp-guide.md  aegntix-mvp-setup.sh  aegntix-readme.md  compound-advantage-amplification-strategy.md  timeline-warfare-strategies.md
DAILYDOCO/ai_docs/: mcp-integration-patterns.md  multi-model-orchestration.md
DAILYDOCO/c1v1-modern-saas/: index.html  package.json  run.sh  tailwind.config.js  vite.config.ts
DAILYDOCO/c2v1-enterprise-premium/: index.html  package.json  run.sh  tailwind.config.js  vite.config.ts
DAILYDOCO/c3v1-ai-futuristic/: index.html  package.json  run.sh  tailwind.config.js  tsconfig.json  vite.config.ts
DAILYDOCO/config/: nginx.conf
DAILYDOCO/n8n-workflows/: dailydoco-admin-engine.json  dailydoco-video-pipeline.json  zero-cost-video-generation.json
DAILYDOCO/research-journal/: advanced-optimizations.md  diminishing-returns-analysis.md  final-recommendations.md  novel-optimizations.md  optimization-strategies.md  processing-time-analysis.md  test-audience-scaling-analysis.md  universal-mcp-ecosystem-deployment.md
DAILYDOCO/scale-testing/: IMPLEMENTATION_COMPLETE.md  README.md  pyproject.toml  run_scale_tests.py  setup_scale_testing.sh
DAILYDOCO/scripts/: 100b-schema-standard.sql  100b-schema-upgrade.sql  init-db.sql  performance-validation.ts  test-performance.ts  unified-auth-schema.sql
multi-cld-code/: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PLANNING.md  TASKS.md  TUI-GUIDE.md  cctm  cctm-demo  cctm-pickd-demo  cctm-pickd-integration.rs  cctm-predictive  cctm-predictive-demo.rs  cctm-simple  cctm-tui-advanced-app.rs  cctm-tui-advanced-complete.rs  cctm-tui-advanced.rs  cctm-tui-main.rs  cctm-tui-predictive.rs  cctm-tui-simple.rs  index.html  launch-demo.sh  launch-grid.sh  launch-tui.sh  multi-cld-cde README (copy).md  package.json  tailwind.config.js  vite.config.ts
multi-cld-code/mvp-demo/: README.md  attention-detector.js  basic-ui.html  mvp-terminal-manager.js  terminal-pool.js
multi-cld-code/src/: App.css  App.tsx  engine.rs  hub.rs  styles.css
multi-cld-code/src-tauri/: ARCHITECTURE_VISUAL.md  Cargo.toml  IMPLEMENTATION_GUIDE.md  ULTRAPLAN_100B_TRANSFORMATION.md  tauri.conf.json
(+2235 files in other folders)
