[package]
name = "cctm-tui"
version = "0.1.0"
description = "Claude Code Terminal Manager TUI - Revolutionary AI-Human Co-Creation Tool"
authors = ["CCTM Team"]
edition = "2021"

[[bin]]
name = "cctm-tui"
path = "src/main.rs"

[dependencies]
# TUI dependencies
ratatui = "0.28"
crossterm = "0.28"
color-eyre = "0.6"
chrono = { version = "0.4", features = ["serde"] }

